# SmoothThermistor

./: .gitignore  LICENSE  Makefile  README.md  keywords.txt  library.properties
.github/workflows/: ci.yml
examples/SmoothThermistorAdvanced/: SmoothThermistorAdvanced.ino
examples/SmoothThermistorExample/: SmoothThermistorExample.ino
examples/SmoothThermistorExponential/: SmoothThermistorExponential.ino
examples/SmoothThermistorFiltering/: SmoothThermistorFiltering.ino
examples/SmoothThermistorMedian/: SmoothThermistorMedian.ino
examples/SmoothThermistorNoise/: SmoothThermistorNoise.ino
examples/SmoothThermistorOversampling/: SmoothThermistorOversampling.ino
examples/SmoothThermistorStability/: SmoothThermistorStability.ino
examples/SmoothThermistorSteinhartHart/: SmoothThermistorSteinhartHart.ino
src/: SmoothThermistor.cpp  SmoothThermistor.h
test/: Arduino.h  CMakeLists.txt  test_smooththermistor.cpp
